更改相对地址，解决图片无法加载的问题

--- a/css/scenery.css
+++ b/css/scenery.css
@@ -5,7 +5,7 @@ body {
     rgba(255, 255, 255, 0.9),
     rgba(255, 255, 255, 0.7)
   );
-  background-image: url("/image/潇湘盛景1.jpg");
+  background-image: url("../image/潇湘盛景1.jpg");
   background-size: cover;
 }
 
