--- a/css/memory.css
+++ b/css/memory.css
@@ -7,7 +7,7 @@ body {
     rgba(255, 255, 255, 0.9),
     rgba(255, 255, 255, 0.7)
   );
-  background-image: url("/image/湖湘记忆背景.png");
+  background-image: url("../image/湖湘记忆背景.png");
 }
 
 header {
